--- a/src/app/Gamestore/User/user-config/user-config.component.css
+++ b/src/app/Gamestore/User/user-config/user-config.component.css
@@ -1,11 +1,37 @@
 .body{
     width: 50%;
-    height: 98%;
+    height: fit-content;
     background-color: white;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     margin-left: 25%;
     margin-top: 3%;
+    margin-bottom: 6%;
     border-radius: 20px;
+    position: sticky;
     border: 1px solid black;
 }
+.titulo{
+    margin-left: 5% ;
+}
+
+.divButton{
+    display: flex;
+    flex-direction: row;
+    margin-top: 2%;
+    width: 100%;
+    height: 20%;
+    background-color: inherit;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+.img{
+   
+    border-radius: 50%;
+    overflow: hidden;
+    width: 100px;
+    height: 100px; 
+  }
