--- a/src/app/login/logueo/logueo.component.html
+++ b/src/app/login/logueo/logueo.component.html
@@ -16,5 +16,7 @@
         required="required"
       />
       <button mat-button (click)="login()" textContent="Ingresar">Ingresar</button>
+      <button mat-button (click)="registrar()" textContent="Registrarse" style="margin-top: 5%;">Registrarse</button>
+    
     </form>
   </div>
