--- a/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.css
+++ b/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.css
@@ -17,31 +17,71 @@
     padding: 8px 24px 0;
   }
 
-  /* .btn-edit{
-    height: 25px; 
-    position: static;
-    background: transparent;
-    border: none;
-    padding-top: 5px;
-    vertical-align: text-top;
+  .imgTabla{
+    width: 80%;
+    height: 110px;
   }
 
-  .btn-detalle{
-    height: 25px; 
-    position: static;
-    background: transparent;
-    border: none;
-    padding-top: 5px;
-    padding-left: 10%;
-    vertical-align: text-top;
+  .mat-mdc-table{
+    white-space: normal;
+    min-width: 70%;
   }
 
-  .btn-delete{
-    height: 25px;
-    position: static;
-    border: none;
-    background: transparent;
-    padding-top: 5px;
-    padding-left: 10%;
-    vertical-align: text-top;
-  } */
+  .mdc-data-table__table {
+    /* Estilos personalizados aquí */
+    background-color: var(--backGroundtablas);
+    border-bottom-color: 1px solid #000000;
+    white-space: nowrap;
+    min-width: 80%;
+    margin-left: 1%;
+    margin-right: 1%;
+    white-space: normal;
+    /* Otros estilos que desees aplicar */
+  }
+
+/* Esta clase indica a las cabeceras de la tabla */
+.mdc-data-table__header-cell{
+  padding: 0 1% 0 1%;
+    border-bottom:2px black solid;
+}
+
+.mdc-data-table__table[_ngcontent-ng-c3315818091] {
+  white-space: normal
+} 
+/* Esta clase indica a las celdas de la tabla */
+.mdc-data-table__cell{
+  padding: 0 1% 0 1%;
+
+  border-bottom:2px black solid;
+  height: auto;
+  overflow-wrap: anywhere;
+ 
+}
+.mdc-data-table__row {
+  height: 30%;
+}
+
+
+.btn{
+  width: 10%;
+}
+.mdc-button {
+  padding: 0 3px 0 3px;
+  width: 5%;
+  min-width: 50px;
+}
+
+.mat-cell {
+  white-space: normal; /* O también puedes usar 'pre-wrap' */
+}
+
+.mat-mdc-button>.mat-icon {
+  margin-left: 0;
+  margin-right: 8px;
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  font-size: 1.125rem;
+  height: 1.125rem;
+  width: 1.125rem;
+} 
