--- a/src/app/Gamestore/Admin/crud-usuarios/modal-user/modal-user.component.css
+++ b/src/app/Gamestore/Admin/crud-usuarios/modal-user/modal-user.component.css
@@ -1,9 +1,12 @@
 .body{
     display: flex;
-    height: 100%;
+    height: 95%;
+    border: none  ;
+    overflow: hidden;
     flex-direction: column;
     align-items: center;
-    margin-left: 2%;
+    text-align: center;
+    margin: 2%;
     background-color: rgb(255, 255, 255);
     
 }
@@ -14,21 +17,22 @@
     width: 95%;
 }
 
-.span_timer{
-  float: right; 
-  margin-top: 18px;
-  margin-left: 45%;
-}
+
 
 .form{
-    width: 90%;
+    width: 100%;
 }
 .card{
 
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  
+    width: 100%;
+    height: 90%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    border: 1px black solid;
+    border-radius: .25rem;
 }
 .card-body{
 
@@ -36,38 +40,36 @@
     flex-direction: column;
     margin-left: 2%;
     width: 90%;
+    padding: 1rem 0 0 0;
 }
 .divPasword{
   display: flex;
-  
   flex-direction: row;
 }
 
-.dos{
+.divbtton{
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
   align-items: center;
   justify-content: space-around;
-  margin-top: 20px;
-  height: 50%;
+  width: 100%;
+ 
   margin-bottom: 2%;
-  position: sticky;
   bottom: 0;
-  background-color: lightsteelblue;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  background-color: transparent;
+  
 
 }
 
 .btn-danger{
     float: right;
-    align-items: flex-end;
-    background-color:none;
+    margin-bottom: 5%;
+    margin-right: 30px; 
     border: none;
 }
 .btn-success{
   float: left;
   margin-left: 30px; 
-  
+  margin-bottom: 5%;
   border: none;
 }
