--- a/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/modal-vj/modal-vj.component.html
@@ -75,12 +75,12 @@
       
     </div>
   </div>
-  <div class="card-header position-sticky sticky-top" style="margin:2%;background-color:rgb(255, 255, 255);top: -25px;">
+  <div class="botonesDiv" style="">
     
-    <button mat-button class=" btn btn-danger" (click)="close()"  >
-        <mat-icon>exit_to_app</mat-icon>
+    <button mat-button class=" btn btn-danger" title="Cerrar" (click)="close()"  >
+        <mat-icon style="margin-bottom: 10px;">exit_to_app</mat-icon>
     </button>
-    <button mat-button class=" btn btn-success" (click)="registar()" (click)=actualiza()  >
+    <button mat-button class=" btn btn-success" title="Agregar" (click)="registar()" (click)=actualiza()  >
         <mat-icon>done</mat-icon>
     </button>
     
