--- a/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
@@ -6,7 +6,7 @@
 
 <mat-card class="example-card">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image" style=" background-image: url('../../../../../../assets/PortadasVj/{{x.img}}');"></div>
+      <div mat-card-avatar class="example-header-image" style=" background-image: url( {{getimagen(x.img)}} ) ;"></div>
       <mat-card-title>{{x.nombre}}</mat-card-title>
       <mat-card-subtitle>{{x.precio|euros}}</mat-card-subtitle>
     </mat-card-header>
