--- a/src/app/Gamestore/User/user-config/user-config.component.html
+++ b/src/app/Gamestore/User/user-config/user-config.component.html
@@ -74,7 +74,7 @@
         <button mat-button class=" btn btn-success" style="margin-left: 5%;" (click)="actualizar()"  >
           <mat-icon>done</mat-icon>
       </button>
-        <button mat-button class=" btn btn-danger" style="margin-right: 5%;"  >
+        <button mat-button class=" btn btn-danger" style="margin-right: 5%;" (click)="cerrar()" >
             <mat-icon>exit_to_app</mat-icon>
         </button>
         
