--- a/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.css
+++ b/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.css
@@ -12,7 +12,7 @@
 
 .example-card {
     width: 100%;
-    max-height: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     background-color:rgb(252, 252, 252) ;
@@ -27,10 +27,19 @@
     border-radius: 2px;
    
     width: 60%;
-    height: 50%;
+    height: 35%;
   }
   .texto-card{
     width: 90%;
     word-wrap: break-word;
     
+  }
+
+  .btnDiv{
+  display: flex;
+  align-items: center;
+  position: absolute; /* Establece la posición absoluta para el div abajo */
+  bottom: 0; /* Lo sitúa en la parte inferior de la caja padre */
+  justify-content: center;
+  width: 100%; /* Ocupa todo el ancho disponible de la caja padre */
   }
