--- a/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
@@ -18,7 +18,7 @@
       <p>Plataformas: {{plataformas}}</p>
       <p>Genero: {{genero}}</p>
     </mat-card-content>
-    <mat-card-actions>
+    <mat-card-actions class="btnDiv">
         <button mat-button class="btn-buy" title="agregar" *ngIf="tipo!=2" (click)="cargar()">
         <mat-icon style="color: black;">shopping_cart</mat-icon>
     </button> 
