--- a/src/app/Gamestore/User/index-user/index-user.component.css
+++ b/src/app/Gamestore/User/index-user/index-user.component.css
@@ -180,6 +180,17 @@ width: 100%;
   height: 100%;
 }
 
+.infoDiv{
+  width: 20%;
+    display: flex;
+    flex-direction: column;
+    border: 2px black solid;
+    margin: 3%;
+    align-items: center;
+    border-radius: 20px;
+    border-color: var(--temaPrincipal);
+}
+
 .btnFooter{
   margin-right: 1%;
   margin-top: 0.5%;
