--- a/src/app/login/registro/registro.component.html
+++ b/src/app/login/registro/registro.component.html
@@ -73,7 +73,7 @@
         <button mat-button class=" btn btn-success" style="margin-left: 5%;" (click)="registrar()" >
           <mat-icon>done</mat-icon>
       </button>
-        <button mat-button class=" btn btn-danger" style="margin-right: 5%;"  >
+        <button mat-button class=" btn btn-danger" style="margin-right: 5%;" (click)="login()" >
             <mat-icon>exit_to_app</mat-icon>
         </button>
         
