--- a/src/app/Gamestore/Admin/crud-usuarios/modal-user/modal-user.component.html
+++ b/src/app/Gamestore/Admin/crud-usuarios/modal-user/modal-user.component.html
@@ -18,7 +18,7 @@
         
         <mat-form-field style="width: 60%;">
           <mat-label>Username</mat-label>
-          <input matInput  formControlName="user"  name="user"   maxlength="50" autocomplete="off" />
+          <input matInput  formControlName="user"  name="user"   maxlength="50" autocomplete="on" />
         </mat-form-field>
         <div class="divPasword">
         <mat-form-field  style="width: 60%;" >
@@ -34,7 +34,7 @@
         </mat-form-field>
         <mat-form-field style="width: 80%;">
           <mat-label>Email</mat-label>
-          <input matInput  formControlName="email" name="email" type="text"  autocomplete="off"  />
+          <input matInput  formControlName="email" name="email" type="text"  autocomplete="on"  />
         </mat-form-field>
         <mat-form-field style="width: 80%;">
             <mat-label>TarjetaCredito</mat-label>
@@ -46,14 +46,27 @@
           </mat-form-field>
         <mat-form-field style="width: 60%;">
           <mat-select placeholder="Rol " formControlName="rol" >
-            <mat-option  value="admin">
+            <mat-option  value="ROLE_ADMIN">
               Administrador
             </mat-option>
-            <mat-option  value="user">
+            <mat-option  value="ROLE_USER">
                 Usuario
               </mat-option>
           </mat-select>
         </mat-form-field>
+
+        <div style="display: flex; flex-direction: row;width: 70%;max-height: 15%;">
+        
+          <button mat-icon-button (click)="fileInput.click()"  style="margin-left: 1%;">
+            <mat-icon>attach_file</mat-icon>
+          </button>
+  
+          <input type="file" (ngModel)="selectedFileName" (change)="handleFileInput($event)" (change)="onFileSelected($event)" style="display: none" #fileInput>
+          <input [value]="selectedFileName" disabled="true"  style="max-width: 40%;height: 10%;margin-left: 2%;margin-top: 2%;">
+          <div *ngIf="selectedFileUrl" style="max-width: 30%;max-height: 30%;margin-left: 5%;" >
+            <img [src]="selectedFileUrl" alt="Imagen seleccionada" style="max-width: 100%;max-height: 100%;" >
+          </div>
+        </div>
   
       </div>
 
