--- a/src/app/Gamestore/Admin/crud-vc/crud-vc.component.html
+++ b/src/app/Gamestore/Admin/crud-vc/crud-vc.component.html
@@ -21,7 +21,7 @@
       
       <ng-container matColumnDef="nombre">
         <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
-        <mat-cell *matCellDef="let element" style=""> {{element.nombre| uppercase}} </mat-cell>
+        <mat-cell *matCellDef="let element" > {{element.nombre| uppercase}} </mat-cell>
       </ng-container>
   
       
