--- a/src/app/login/logueo/logueo.component.html
+++ b/src/app/login/logueo/logueo.component.html
@@ -3,7 +3,7 @@
       <h1>GameStore</h1>
       <input
         type="text"
-        [(ngModel)]="email"
+        [(ngModel)]="username"
         name="Usuario"
         placeholder="Usuario"
         required="required"
