--- a/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.css
+++ b/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.css
@@ -36,6 +36,7 @@
     margin-left: 10%;
     margin-right: 1%;
     white-space: normal;
+    margin-top: 3%;
     /* Otros estilos que desees aplicar */
   }
 
@@ -85,3 +86,10 @@
   height: 1.125rem;
   width: 1.125rem;
 } 
+
+/*Estilo del paginator*/
+.mat-mdc-paginator-container {
+  
+  justify-content: center;
+  
+}
