--- a/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
+++ b/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
@@ -76,5 +76,10 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
+    <mat-paginator  #paginator style="display: flex;  justify-content: center;"
+    [pageSize]="4"
+    [pageSizeOptions]="[4, 8, 12]"
+    [showFirstLastButtons]="true">
+    </mat-paginator>
   </div>
 
