--- a/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
+++ b/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
@@ -42,7 +42,7 @@
       <ng-container matColumnDef="activo" >
         <mat-header-cell *matHeaderCellDef style="max-width: 7%;"> activo </mat-header-cell>
         <mat-cell *matCellDef="let element" style="max-width: 7%;"> 
-          {{element.rol}}</mat-cell>
+          {{element.estado}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="foto">
         <mat-header-cell *matHeaderCellDef style="max-width: 10%;padding-left: 3%;"> foto </mat-header-cell>
